fix hairline gap chrome bug use padding and background instead of border on headshot

--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -18,7 +18,8 @@
         width: (200em / 16)
         height: (200em / 16)
         margin-bottom: 17px
-        border: 9px solid #fff
+        border: 0
+        padding: 9px
         background-color: #fff
         border-radius: 5%
         transition: all .2s
